required JDK version pushed to 16+
it was intended to switch JPackage invocation from terminal to ToolProvider.
Alas, the ToolProvider way throws an exception, so the switch has been delayed.
Yet the preparation is solid and hereby committed.